--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,59 +18,110 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:padding="10dp"
+        android:layout_margin="16dp"
+        android:background="@drawable/tic_grid"
+        android:padding="16dp"
         android:stretchColumns="0,1,2">
 
         <TableRow
+            android:layout_marginTop="22dp"
             android:layout_marginBottom="20dp"
-            android:weightSum="6">
+            android:gravity="center_vertical">
 
-            <ImageButton
-                android:layout_weight="2"
-                android:src="@drawable/ic_launcher_background" />
+            <ImageView
+                android:id="@+id/block1"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:onClick="onTap"
+                android:src="@drawable/ic_launcher_background"
+                android:tag="0"/>
 
-            <ImageButton
-                android:layout_weight="2"
-                android:src="@drawable/ic_launcher_background" />
+            <ImageView
+                android:id="@+id/block2"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:onClick="onTap"
+                android:src="@drawable/ic_launcher_background"
+                android:tag="1"/>
 
-            <ImageButton
-                android:layout_weight="2"
-                android:src="@drawable/ic_launcher_background" />
+            <ImageView
+                android:id="@+id/block3"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:onClick="onTap"
+                android:src="@drawable/ic_launcher_background"
+                android:tag="2"/>
         </TableRow>
 
         <TableRow
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="20dp"
-            android:weightSum="6">
+            android:gravity="center_vertical">
 
-            <ImageButton
-                android:layout_weight="2"
-                android:src="@drawable/ic_launcher_background" />
+            <ImageView
+                android:id="@+id/block4"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:onClick="onTap"
+                android:src="@drawable/ic_launcher_background"
+                android:tag="3"/>
 
-            <ImageButton
-                android:layout_weight="2"
-                android:src="@drawable/ic_launcher_background" />
+            <ImageView
+                android:id="@+id/block5"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:onClick="onTap"
+                android:src="@drawable/ic_launcher_background"
+                android:tag="4"/>
 
-            <ImageButton
-                android:layout_weight="2"
-                android:src="@drawable/ic_launcher_background" />
+            <ImageView
+                android:id="@+id/block6"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:onClick="onTap"
+                android:src="@drawable/ic_launcher_background"
+                android:tag="5"/>
         </TableRow>
 
         <TableRow
+            android:layout_marginTop="16dp"
             android:layout_marginBottom="20dp"
-            android:weightSum="6">
+            android:gravity="center_vertical">
 
-            <ImageButton
-                android:layout_weight="2"
-                android:src="@drawable/ic_launcher_background" />
+            <ImageView
+                android:id="@+id/block7"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:onClick="onTap"
+                android:src="@drawable/ic_launcher_background"
+                android:tag="6"/>
 
-            <ImageButton
-                android:layout_weight="2"
-                android:src="@drawable/ic_launcher_background" />
+            <ImageView
+                android:id="@+id/block8"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:onClick="onTap"
+                android:src="@drawable/ic_launcher_background"
+                android:tag="7"/>
 
-            <ImageButton
-                android:layout_weight="2"
-                android:src="@drawable/ic_launcher_background" />
+            <ImageView
+                android:id="@+id/block9"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:onClick="onTap"
+                android:src="@drawable/ic_launcher_background"
+                android:tag="8"/>
         </TableRow>
     </TableLayout>
+
+    <TextView
+        android:id="@+id/tvStatus"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="X's turn : Tap to play"
+        android:textSize="24sp"
+        android:gravity="center"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="46dp"/>
 
 </RelativeLayout>
